--- a/src/component/ItemCounts/itemCounts.css
+++ b/src/component/ItemCounts/itemCounts.css
@@ -1,7 +1,17 @@
 .counter {
     width: fit-content;
-    background-color: aqua;
+    background-color: rgba(7, 88, 88, 0.596);
     margin: auto;
     padding: 1rem;
     text-align: center;
+    border-radius: 10px;
+    font-size: 15px;
+}
+
+.counter button {
+    padding: 5px 10px;
+    margin: 5px 10px;
+    border-radius: 10px;
+    background-color: white;
+    border: 1px solid gray;
 }
