agregando contexto a la aplicacion

--- a/src/component/Cart/cart.css
+++ b/src/component/Cart/cart.css
@@ -1,2 +1,14 @@
-.cart {
+.cart__product {
+    display: flex;
+    align-items: center;
+    background-color: grey;
+}
+
+.cart__product div {
+    margin-right: 1rem;
+}
+
+.cart__product img {
+    width: 50px;
+    object-fit: cover;
 }
