--- a/src/component/ItemCounts/itemCounts.css
+++ b/src/component/ItemCounts/itemCounts.css
@@ -15,3 +15,9 @@
     background-color: white;
     border: 1px solid gray;
 }
+
+.counter button:hover {
+    color: white;
+    background-color: black;
+    cursor: pointer;
+  }
