Corrigiendo altura del layout

--- a/src/component/Cart/cart.css
+++ b/src/component/Cart/cart.css
@@ -93,7 +93,7 @@
   }
 
   .contenedor__cartList {
-    min-height: 300px;
+    min-height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
