--- a/src/component/NavBar/index.css
+++ b/src/component/NavBar/index.css
@@ -38,3 +38,11 @@
     align-items: center;
     gap: 1rem;
 }
+
+@media only screen and (max-width: 844px) {
+    .header__main {
+        display: flex;
+        background-color: red;
+    }
+}
+
