--- a/src/component/footer/footer.css
+++ b/src/component/footer/footer.css
@@ -15,4 +15,10 @@
 font-size: 25px;
 }
 
+@media only screen and (max-width: 480px) {
+    .footer__Container {
+      width: 90%;
+      background-color: blue;
+    }
 
+  }
