--- a/src/component/ItemListContainer/itemListContainer.css
+++ b/src/component/ItemListContainer/itemListContainer.css
@@ -4,3 +4,20 @@
     gap: 1rem;
     min-height: 80vh;
 }
+
+@media only screen and (max-width: 480px) {
+    .ItemListContainer {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        background-color: red;
+
+    }
+
+     
+
+    
+    
+
+
+}
