--- a/src/component/ItemListContainer/itemListContainer.css
+++ b/src/component/ItemListContainer/itemListContainer.css
@@ -10,8 +10,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        background-color: red;
-
+        align-items: center;
     }
 
      
