--- a/src/component/NavBar/index.css
+++ b/src/component/NavBar/index.css
@@ -42,7 +42,8 @@
 @media only screen and (max-width: 480px) {
     .header__main {
         display: flex;
-        width: 100&;
+        width: 100%;
+        justify-content: center;
     }
     .header__nav {
         display: flex;
