--- a/src/component/ItemDetail/itemDetail.css
+++ b/src/component/ItemDetail/itemDetail.css
@@ -80,13 +80,15 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    max-width: 100%;
+    align-items: center;
+    width: 100%;
   }
 
   .detail__image {
+    padding: 0;
     padding-top: 20px;
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -104,10 +106,12 @@
     
   }
   .precio__image {
-    display: flex;
-    justify-content: center;
+    text-align: center;
+
   }
-  .counter {
-    margin-top: 35px;
+  
+
+  .content {
+    align-items: center;
   }
 }
