--- a/src/component/Item/item.css
+++ b/src/component/Item/item.css
@@ -1,61 +1,61 @@
 .item {
-    -webkit-box-shadow: 0 1px 1px 0 rgba(7, 7, 7, 0.1);
-    box-shadow: 0 1px 1px 0 rgba(7, 7, 7, 0.1);
-    background-color: #28282b70;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    padding: 10px;
-    color: white;
-    height: min-content;
-    margin: 10px 0;
-  }
+  -webkit-box-shadow: 0 1px 1px 0 rgba(7, 7, 7, 0.1);
+  box-shadow: 0 1px 1px 0 rgba(7, 7, 7, 0.1);
+  background-color: #28282b70;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 10px;
+  color: white;
+  height: min-content;
+  margin: 10px 0;
+}
 
-  .image__item {
-    width: 200px;
-    height: 264px;
-    object-fit: cover;
-  } 
-  
-  .image__item p {
-    color: rgba(42, 2, 2, 0.485);
-  }
+.image__item {
+  width: 200px;
+  height: 264px;
+  object-fit: cover;
+  border-radius: 15px;
+}
 
-  .product__title {
-    width: 60%;
-    text-align: center;
-  }
-  
-  .ver__mas {
-    background-color: #1e2122;
-    width: 60%;
-    text-align: center;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: bold;
-    padding: 15px;
-    margin-top: 15px;
-    border-radius: 20px;
-    color: white;
-  }
+.image__item p {
+  color: rgba(42, 2, 2, 0.485);
+}
 
-  .ver__mas:hover {
-    color: white;
-    background-color: black;
-  }
+.product__title {
+  width: 60%;
+  text-align: center;
+}
 
-  @media only screen and (max-width: 480px) {
-    .item {
-      width: 80%;
-    }
+.ver__mas {
+  background-color: #1e2122;
+  width: 60%;
+  text-align: center;
+  font-family: "Times New Roman", Times, serif;
+  font-weight: bold;
+  padding: 15px;
+  margin-top: 15px;
+  border-radius: 20px;
+  color: white;
+}
 
+.ver__mas:hover {
+  color: white;
+  background-color: black;
+}
+
+@media only screen and (max-width: 480px) {
+  .item {
+    width: 80%;
   }
+}
