--- a/src/component/NavBar/index.css
+++ b/src/component/NavBar/index.css
@@ -1,60 +1,92 @@
 .header__main {
-    background-color: rgb(16, 15, 15);
-    min-height: 10vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
+  background-color: rgb(16, 15, 15);
+  min-height: 10vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .header__title {
-    min-width: max-content;
-    padding: 10px;
-    font-weight: bold;
-    color: white;
+  min-width: max-content;
+  padding: 10px;
+  font-weight: bold;
+  color: white;
 }
 
 .header__nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .header__options {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
 }
 
 .header__options li {
-    padding: 10px;
-    font-weight: bold;
-    color: white;
+  padding: 10px;
+  font-weight: bold;
+  color: white;
 }
 
 .container__category {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.hamburger {
+  display: none;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  margin: 6px 0;
+  transition: 0.4s;
 }
 
 @media only screen and (max-width: 480px) {
-    .header__main {
-        display: flex;
-        width: 100%;
-        justify-content: center;
-    }
-    .header__nav {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 80%;
-    }
-    .container__category {
-        display: grid;
-        width: fit-content;
-    }
+  .header__nav {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    position: relative;
+  }
 
+  .hamburger {
+    display: block;
+  }
+
+  .header__options {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    left: 0;
+    background-color: rgb(16, 15, 15);
+    z-index: 1;
+  }
+
+  .header__options li {
+    text-align: center;
+  }
+
+  .mobile-menu-open {
+    display: flex;
+  }
+  .container__category {
+    display: flex;
+    flex-direction: column;
+    padding-top: 50px;
+  }
 }
-
